--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="polygon.js"></script>
     <script src="slingshot.js"></script>
       <script src="sketch.js"></script>
+      <script src="matter.js"></script>
   
 
 </body></html>
